--- a/content/posts/carga-fuente.mdx
+++ b/content/posts/carga-fuente.mdx
@@ -4,7 +4,7 @@ date: '2026-01-04'
 description: 'Aprende a eliminar el Cumulative Layout Shift (CLS) causado por las fuentes web usando métricas de fallback y next/font.'
 tags: ['Performance', 'CSS', 'Next.js', 'Web Vitals']
 author:
-  name: "Torres"
+  name: "Iván Torres"
   role: "Software Developer"
   avatar: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face"
 ---
