--- a/content/posts/adios-sass-js-5-nuevas-herramientas-css.mdx
+++ b/content/posts/adios-sass-js-5-nuevas-herramientas-css.mdx
@@ -4,7 +4,7 @@ excerpt: 'Explora cómo las nuevas APIs de CSS eliminan la necesidad de Sass, li
 categories: ['CSS']
 image: "/adios-sass-js-5-nuevas-herramientas-css.png"
 author:
-  name: "Torres"
+  name: "Iván Torres"
   role: "Software Developer"
   avatar: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face"
 ---
