feat: Implement blog post management utilities and add two new content posts with their associated images.

--- a/content/posts/adios-sass-js-5-nuevas-herramientas-css.mdx
+++ b/content/posts/adios-sass-js-5-nuevas-herramientas-css.mdx
@@ -2,7 +2,9 @@
 title: 'Adiós a Sass y JS: 5 Nuevas Herramientas de CSS que Transformarán tu Desarrollo'
 excerpt: 'Explora cómo las nuevas APIs de CSS eliminan la necesidad de Sass, librerías JS y complicaciones, simplificando tu flujo de trabajo.'
 categories: ['CSS']
-image: "/adios-sass-js-5-nuevas-herramientas-css.png"
+image: "/adios-sass-js-hero-v2.png"
+date: '2026-01-06'
+
 author:
   name: "Iván Torres"
   role: "Software Developer"
