feat: add new blog posts and a dynamic route for displaying blog content.

--- a/content/posts/eliminar-cls-fuentes-core-web-vitals.mdx
+++ b/content/posts/eliminar-cls-fuentes-core-web-vitals.mdx
@@ -11,9 +11,7 @@ author:
   avatar: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face"
 ---
 
-# Elimina el CLS en Fuentes Web: Guía Definitiva para Mejorar tus Core Web Vitals
-
-¿Te ha pasado que entras a una web, vas a hacer clic en un botón y, de repente, el texto "salta", el botón se mueve y acabas clickando en un anuncio o en "Cancelar"? 😡
+¿Te ha pasado que entras a una web, vas a hacer clic en un botón y, de repente, el texto "salta", el botón se mueve y acabas clickando en un anuncio o en "Cancelar"?
 
 Eso es el **CLS (Cumulative Layout Shift)**.
 
