feat: Initialize blog frontend with core components and integrate a content generation agent system.

--- a/content/posts/editar-html-devtools-document-designmode.mdx
+++ b/content/posts/editar-html-devtools-document-designmode.mdx
@@ -1,65 +1,60 @@
 ---
-title: 'Deja de editar HTML en DevTools: Usa document.designMode 🚀'
-excerpt: 'Convierte cualquier página web en un editor de texto enriquecido en vivo con una línea de JavaScript. Perfecto para prototipado rápido, limpieza de capturas de pantalla y pruebas de contenido sin tocar el árbol DOM.'
-categories: ['JavaScript', 'API del DOM']
-date: '2026-01-29'
+title: 'Utilizando document.designMode para Prototipado de UI'
+excerpt: 'Análisis técnico de la propiedad designMode: una API heredada del DOM que permite la edición de contenido global para pruebas de estrés de diseño y prototipado rápido.'
+categories: ['JavaScript', 'Web APIs', 'Productivity']
+date: '2026-02-01'
 
 author:
   name: "Iván Torres"
-  role: "Desarrollador de Software"
+  role: "Software Developer"
 ---
 
-## Deja de editar HTML en DevTools: Usa document.designMode 🚀
+La manipulación del DOM a través del panel de elementos de las herramientas de desarrollo es una práctica estándar para ajustar estilos y atributos. Sin embargo, cuando el objetivo es iterar sobre el contenido textual —como probar la resistencia de un diseño ante cadenas de texto largas o realizar correcciones ortográficas rápidas durante una revisión—, la edición nodo por nodo introduce una fricción innecesaria.
 
-**Lo que aprenderás:** Cómo habilitar la edición de página completa en cualquier navegador para prototipado instantáneo, y por qué esta API de "Modo Dios" difiere de `contentEditable`.
+La propiedad `document.designMode` ofrece una alternativa eficiente. Aunque es una API antigua, originalmente concebida para la creación de editores de texto enriquecido (WYSIWYG) dentro de iFrames, su utilidad persiste hoy como una herramienta de depuración visual y prototipado en el navegador.
 
-### El Problema: El Tedio de DevTools
+### Mecánica de document.designMode
 
-Probar variaciones de longitud de texto o limpiar capturas de pantalla generalmente significa sumergirse en DevTools, buscar el nodo correcto en el árbol DOM y editar manualmente los atributos HTML. **Es lento.** Es tedioso. Y mata tu flujo de trabajo.
+A diferencia del atributo `contentEditable`, que se aplica a elementos específicos del DOM para hacerlos interactivos, `designMode` es una propiedad global del objeto `document`. Al activarla, el navegador trata la página renderizada completa como un documento editable, permitiendo la manipulación directa de cualquier nodo de texto sin necesidad de inspeccionar el árbol de elementos.
 
-Hay una manera mejor: una sola línea de JavaScript que convierte toda la página renderizada en un editor temporal de texto enriquecido.
+Desde una perspectiva técnica, esto cambia el comportamiento del cursor y la gestión de eventos de entrada en todo el *viewport*, suspendiendo temporalmente la interacción estándar (como hacer clic en enlaces) en favor de la inserción de texto.
 
-### La Solución: designMode
+### Implementación
 
-A diferencia de `contentEditable` (que limita la edición a elementos específicos), `designMode` opera a **nivel de documento**. Actívalo a través de la consola:
+La activación se realiza mediante una asignación de cadena simple en la consola de JavaScript. No requiere dependencias ni recargas.
 
 ```javascript
-// Activar "Modo Dios" 🎮
+// Habilitar la edición global en el documento actual
 document.designMode = 'on';
 
-// Volver a la realidad
+// Revertir el estado para restaurar la interactividad de la UI
 document.designMode = 'off';
 ```
 
-Una vez activado, haz clic en cualquier bloque de texto (títulos, botones, párrafos) y edita en línea. Sin inspección de nodos. Sin buscar atributos. Los cambios son puramente del lado del cliente y desaparecen al refrescar.
+Para desarrolladores que utilizan esta funcionalidad frecuentemente, es recomendable encapsularla en una expresión de función invocada inmediatamente (IIFE) o guardarla como un "Snippet" en las DevTools para alternar el estado rápidamente:
 
-### Usos en el Mundo Real
+```javascript
+// Toggle para alternar el estado de edición
+document.designMode = document.designMode === 'on' ? 'off' : 'on';
+console.log(`Modo de diseño: ${document.designMode}`);
+```
 
-Los desarrolladores senior usan esto para:
+### Casos de Uso en Ingeniería de UI
 
-- 🎨 **Prototipado Rápido**: Prueba titulares más largos o diferentes textos al instante mientras diseñas
-- 📸 **Limpieza de Capturas**: Elimina datos sensibles o corrige errores tipográficos antes de capturar sin Photoshop
-- 📋 **Pruebas Responsivas**: Visualiza cómo se rompen los diseños con longitudes de texto variables en tiempo real
-- 🔧 **Demos en Vivo**: Ajusta etiquetas de botones o texto de navegación durante presentaciones a stakeholders sobre la marcha
+El valor de esta API reside en la velocidad de retroalimentación visual durante el ciclo de desarrollo:
 
-### Mejores Prácticas y Advertencias ⚠️
+1.  **Pruebas de Estrés de Contenido (Content Stress Testing):** Permite validar rápidamente cómo se comportan los componentes Flexbox o Grid ante desbordamientos de texto, simulando idiomas con mayor densidad de caracteres o datos dinámicos inesperados.
+2.  **Auditorías Visuales y Limpieza:** Facilita la eliminación de datos sensibles (PII) o la corrección de errores tipográficos en la interfaz antes de realizar capturas de pantalla para documentación o tickets de soporte.
+3.  **Prototipado en Tiempo Real:** Durante revisiones con *stakeholders*, permite ajustar la copia de la interfaz al vuelo sin necesidad de modificar el código fuente ni esperar a una recompilación.
 
-**No lo uses en producción.** Aunque es invaluable para flujos de trabajo de desarrollo, `designMode` ofrece:
+### Limitaciones y Consideraciones Técnicas
 
-- ❌ **Cero sanitización** (vulnerabilidades XSS)
-- ❌ **Sin eventos de cambio** (no se pueden detectar modificaciones programáticamente)
-- ❌ **Sin controles de accesibilidad** (los lectores de pantalla no anunciarán las ediciones)
+Es crucial entender que `designMode` opera directamente sobre el DOM del navegador. En aplicaciones modernas basadas en frameworks reactivos (como React, Vue o Svelte), los cambios realizados mediante `designMode` **no actualizan el estado de la aplicación ni el Virtual DOM**.
 
-Para la edición de texto enriquecido en producción, implementa componentes `contentEditable` controlados con gestión de estado explícita, validación de entrada y etiquetas ARIA en lugar de este interruptor global no controlado.
+*   **Desincronización:** Al modificar el texto, se crea una discrepancia entre la vista renderizada y el modelo de datos subyacente. Cualquier re-renderizado provocado por el framework sobrescribirá estos cambios manuales.
+*   **Seguridad y Producción:** Esta API no debe utilizarse como parte de la lógica de negocio en producción. Carece de mecanismos de sanitización y control de eventos granulares, lo que la hace inadecuada para inputs de usuario reales frente a soluciones modernas controladas.
+*   **Accesibilidad:** Las modificaciones realizadas en este modo no garantizan la actualización de las propiedades del árbol de accesibilidad (AOM), por lo que no es una herramienta válida para probar la experiencia de lectores de pantalla.
 
-### Pruébalo Ahora 🔥
+### Conclusión
 
-No solo leas esto, **pruébalo en vivo en esta página**:
-
-1. Presiona `F12` (o `Cmd+Opt+J` en Mac)
-2. Pega esto en la consola: `document.designMode = 'on'`
-3. Haz clic en cualquier título o párrafo y comienza a escribir
-
-Cuando termines de experimentar, ejecuta `document.designMode = 'off'`. Los cambios desaparecen al refrescar: riesgo cero, máxima utilidad.
-
-**Próximos Pasos:** Guarda este fragmento en tu carpeta de "Snippets" de DevTools para acceso instantáneo durante tu próxima auditoría de UI o demo a stakeholders.
+Aunque `document.designMode` es una reliquia de la web antigua, sigue siendo una utilidad pragmática en el arsenal del desarrollador frontend. Su capacidad para transformar instantáneamente el navegador en un lienzo de texto libre permite validar hipótesis de diseño y contenido con una eficiencia que la edición de atributos HTML no puede igualar.
